--- a/mydos/Makefile
+++ b/mydos/Makefile
@@ -79,5 +79,9 @@ clean:
 	rm -f $@
 	dd if=/dev/zero of=$@ bs=1024 count=1440
 
+write2img: $(dos).bin disk.img
+	dd if=$(dos).bin of=disk.img obs=16 seek=1 conv=notrunc
+disk.img/run: write2img
+
 # SYSeg's  convenience rules (not related to the example itself)
 include bintools.mk
